Navbar logo alignment fix

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 55px;
+    height: 75px;
     padding: 0 10px;
     display: flex;
     justify-content: space-between;
